--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
-Source: calamares-settings-ubuntu
+Source: calamares-settings-mamolinux
 Section: devel
 Priority: optional
-Maintainer: Lubuntu Developers <lubuntu-devel@lists.ubuntu.com>
+Maintainer: Himadri Sekhar Basu <hsb10@iitbbs.ac.in>
 Uploaders: Simon Quigley <tsimonq2@ubuntu.com>
 Build-Depends: debhelper-compat (= 13), intltool, qttools5-dev-tools
 Standards-Version: 4.5.0
@@ -9,17 +9,17 @@ Homepage: https://code.launchpad.net/ubuntu-calamares-settings
 Vcs-Git: https://git.launchpad.net/ubuntu-calamares-settings
 Vcs-Browser: https://git.launchpad.net/ubuntu-calamares-settings
 
-Package: calamares-settings-lubuntu
+Package: calamares-settings-mamolinux
 Architecture: all
 Depends: calamares-settings-ubuntu-common (>= ${binary:Version}),
          ${misc:Depends}
-Breaks: calamares-settings-ubuntustudio
-Conflicts: calamares-settings-ubuntustudio
-Description: Lubuntu Calamares Settings and Branding
- This package contains the Calamares settings and branding for Lubuntu.
+Breaks: calamares-settings-lubuntu, calamares-settings-ubuntustudio
+Conflicts: calamares-settings-lubuntu, calamares-settings-ubuntustudio
+Description: MamoLinux Calamares Settings and Branding
+ This package contains the Calamares settings and branding for MamoLinux.
  As part of the branding the installer slideshow is contained within.
- The settings ensure a proper Lubuntu desktop is installed with the
- LXQt desktop environment.
+ The settings ensure a proper MamoLinux is installed with the
+ a desktop environment of user's choice.
 
 Package: calamares-settings-ubuntu-common
 Architecture: any
@@ -35,15 +35,4 @@ Description: Common Calamares Settings
  This package contains the common Calamares settings for all flavors.
  There is also a automirror Python script to set sources based on
  geolocation.
-
-Package: calamares-settings-ubuntustudio
-Architecture: all
-Depends: calamares-settings-ubuntu-common (>= ${binary:Version}),
-         ${misc:Depends}
-Breaks: calamares-settings-lubuntu
-Conflicts: calamares-settings-lubuntu
-Description: Ubuntu Studio Calamares Settings and Branding
- This package contains the Calamares settings and branding for Ubuntu Studio.
- As part of the branding the installer slideshow is contained within.
- The settings ensure a proper Ubuntu Studio desktop is installed with the
- KDE Plasma desktop environment.
+ 
