--- a/mamolinux/settings-advanced.conf
+++ b/mamolinux/settings-advanced.conf
@@ -43,11 +43,27 @@ instances:
 sequence:
 - show:
   - welcome
-  - netinstall@applications
-  - netinstall@internet
-  - netinstall@multimedia
+  - netinstall@kernel
+  - netinstall@drivers
+  - netinstall@services
+  - netinstall@login
+  - netinstall@desktop
+  - netinstall@arcolinux
+  - netinstall@communication
+  - netinstall@development
   - netinstall@office
+  - netinstall@fonts  
+  - netinstall@multimedia
+  - netinstall@internet
+  - netinstall@theming
+  - netinstall@graphics
+  - netinstall@gaming
+  - netinstall@terminals
+  - netinstall@filemanagers
+  - netinstall@utilitiesusb
   - netinstall@utilities
+  - netinstall@applications
+  - netinstall@arcolinuxdev
   - locale
   - keyboard
   - partition
