MamoLinux specific updates
- Makefile
  - change permission
- mamolinux/modules/after_bootloader_context.conf
  - replace lubuntu with mamolinux
- mamolinux/modules/bootloader.conf
  - replace ubuntu with mamolinux
- mamolinux/modules/displaymanager.conf
  - replace sddm with lightdm
  - replace lxqt with cinnamon-launcher
  - replace Lubuntu with Cinnamon
- mamolinux/modules/partition.conf
  - Add small and suspend as swap choices
- mamolinux/modules/welcome.conf
  - Update showDonateUrl and internetCheckUrl
  - Update requiredStorage and requiredRam

--- a/mamolinux/modules/displaymanager.conf
+++ b/mamolinux/modules/displaymanager.conf
@@ -1,9 +1,9 @@
 displaymanagers:
-  - sddm
+  - lightdm
 
 defaultDesktopEnvironment:
-    executable: "lxqt"
-    desktopFile: "Lubuntu"
+    executable: "cinnamon-launcher"
+    desktopFile: "Cinnamon"
 
 basicSetup: false
 sysconfigSetup: false
