--- a/mamolinux/modules/partition.conf
+++ b/mamolinux/modules/partition.conf
@@ -1,8 +1,10 @@
 efiSystemPartition: "/boot/efi"
 enableLuksAutomatedPartitioning: true
 userSwapChoices:
-    - none
-    - file
+    - none      # Create no swap, use no swap
+    - small     # Up to 4GB
+    - suspend   # At least main memory size
+    - file      # To swap file instead of partition
 initialSwapChoice: file
 drawNestedPartitions: true
 defaultFileSystemType: "ext4"
