--- a/mamolinux/modules/welcome.conf
+++ b/mamolinux/modules/welcome.conf
@@ -2,12 +2,12 @@
 showSupportUrl:         true
 showKnownIssuesUrl:     true
 showReleaseNotesUrl:    true
-showDonateUrl:  https://lubuntu.me/donate/
+showDonateUrl:  https://hsbasu.github.io/mamolinux/#donations
 
 requirements:
-    requiredStorage:    8
-    requiredRam:        0.5
-    internetCheckUrl:	https://lubuntu.me
+    requiredStorage:    10
+    requiredRam:        2
+    internetCheckUrl:	https://hsbasu.github.io/mamolinux/
 
     check:
         - storage
