Add netinstall configuration files
- Add/modify package names availble in ubuntu archives
- Fix displaymanager

--- a/mamolinux/modules/displaymanager.conf
+++ b/mamolinux/modules/displaymanager.conf
@@ -3,7 +3,7 @@ displaymanagers:
 
 defaultDesktopEnvironment:
     executable: "cinnamon-launcher"
-    desktopFile: "Cinnamon"
+    desktopFile: "cinnamon"
 
 basicSetup: false
 sysconfigSetup: false
