Fix netinstall modules
- remove remote configuations, use local files
- netinstall-drivers: fix permission
- Add netinstall modules for advanced install
- Add deb packaging generated files to .gitignore

--- a/mamolinux/modules/netinstall-utilities.yaml
+++ b/mamolinux/modules/netinstall-utilities.yaml
@@ -182,3 +182,14 @@
     - workrave
     # - wttr
     # - yin-yang-git
+- name: "Bootloaders"
+  description: "Utility packages for bootloaders"
+  critical: false
+  hidden: false
+  selected: false
+  expanded: true
+  packages:
+    - grub-efi-amd64-signed
+    - grub-efi-ia32
+    - grub-pc
+    - shim-signed
