--- a/mamolinux/settings-advanced.conf
+++ b/mamolinux/settings-advanced.conf
@@ -2,6 +2,33 @@
 modules-search: [ local ]
 
 instances:
+- id:       kernel
+  module:   netinstall
+  config:   netinstall-kernel.conf
+- id:       drivers
+  module:   netinstall
+  config:   netinstall-drivers.conf
+- id:       nvidia
+  module:   netinstall
+  config:   netinstall-nvidia.conf
+- id:       services
+  module:   netinstall
+  config:   netinstall-services.conf
+- id:       login
+  module:   netinstall
+  config:   netinstall-login.conf
+- id:       desktop
+  module:   netinstall
+  config:   netinstall-desktop.conf
+- id:       communication
+  module:   netinstall
+  config:   netinstall-communication.conf
+- id:       development
+  module:   netinstall
+  config:   netinstall-development.conf
+- id:       fonts
+  module:   netinstall
+  config:   netinstall-fonts.conf
 - id:       applications
   module:   netinstall
   config:   netinstall-applications.conf
@@ -11,6 +38,24 @@ instances:
 - id:       multimedia
   module:   netinstall
   config:   netinstall-multimedia.conf
+- id:       theming
+  module:   netinstall
+  config:   netinstall-theming.conf
+- id:       graphics
+  module:   netinstall
+  config:   netinstall-graphics.conf
+- id:       gaming
+  module:   netinstall
+  config:   netinstall-gaming.conf
+- id:       terminals
+  module:   netinstall
+  config:   netinstall-terminals.conf
+- id:       filemanagers
+  module:   netinstall
+  config:   netinstall-filemanagers.conf
+- id:       utilitiesusb
+  module:   netinstall
+  config:   netinstall-usb.conf
 - id:       office
   module:   netinstall
   config:   netinstall-office.conf
@@ -45,10 +90,10 @@ sequence:
   - welcome
   - netinstall@kernel
   - netinstall@drivers
+  - netinstall@nvidia
   - netinstall@services
   - netinstall@login
   - netinstall@desktop
-  - netinstall@arcolinux
   - netinstall@communication
   - netinstall@development
   - netinstall@office
@@ -63,7 +108,6 @@ sequence:
   - netinstall@utilitiesusb
   - netinstall@utilities
   - netinstall@applications
-  - netinstall@arcolinuxdev
   - locale
   - keyboard
   - partition
