--- a/mamolinux/modules/packages.conf
+++ b/mamolinux/modules/packages.conf
@@ -5,7 +5,10 @@ operations:
       - "^live-*"
       - calamares-settings-mamolinux
       - calamares
+      - casper
+      - discover
       - hunspell-en-us
+      - laptop-detect
       - zram-config
       - cifs-utils
   - try_install:
