--- a/mamolinux/modules/mount.conf
+++ b/mamolinux/modules/mount.conf
@@ -8,11 +8,9 @@ extraMounts:
     - device: /dev
       mountPoint: /dev
       options: bind
-    - device: tmpfs
-      fs: tmpfs
+    - device: /run
+      fs: /run
       mountPoint: /run
-    - device: /run/udev
-      mountPoint: /run/udev
       options: bind
 
 extraMountsEfi:
