Rebase with Lubuntu jammy
- Don't allow the first user to be created with a blank password in either
  Lubuntu or Ubuntu Studio. (LP: #2016436)
- Fixed LibreOffice localization bug (LP: #1970270)
- Fixed BTRFS installation bug (LP: #1966774).
- Change calamares to use Ubuntu Studio Light colors
- Fix for kded automount issue (LP: #1965658)
- Update Ubuntu Studio logo, slideshow (LP: #1965645)

--- a/mamolinux/modules/mount.conf
+++ b/mamolinux/modules/mount.conf
@@ -11,6 +11,14 @@ extraMounts:
     - device: /run
       fs: /run
       mountPoint: /run
+    - device: tmpfs
+      fs: tmpfs
+      mountPoint: /run
+    - device: /run/udev
+      mountPoint: /run/udev
+      options: bind
+    - device: /run/systemd/resolve
+      mountPoint: /run/systemd/resolve
       options: bind
 
 extraMountsEfi:
