--- a/debian/control
+++ b/debian/control
@@ -4,10 +4,11 @@ Priority: optional
 Maintainer: Himadri Sekhar Basu <hsb10@iitbbs.ac.in>
 Uploaders: Simon Quigley <tsimonq2@ubuntu.com>
 Build-Depends: debhelper-compat (= 13), intltool, qttools5-dev-tools
-Standards-Version: 4.6.0
-Homepage: https://code.launchpad.net/ubuntu-calamares-settings
-Vcs-Git: https://git.launchpad.net/ubuntu-calamares-settings
-Vcs-Browser: https://git.launchpad.net/ubuntu-calamares-settings
+Standards-Version: 4.6.2
+Homepage: https://github.com/mamolinux/calamares-settings-mamolinux
+Vcs-Git: https://github.com/mamolinux/calamares-settings-mamolinux.git
+Vcs-Browser: https://github.com/mamolinux/calamares-settings-mamolinux
+Rules-Requires-Root: no
 
 Package: calamares-settings-mamolinux
 Architecture: all
