--- a/mamolinux/mamolinux-calamares.desktop.in
+++ b/mamolinux/mamolinux-calamares.desktop.in
@@ -1,9 +1,10 @@
 [Desktop Entry]
 Type=Application
 Version=1.0
-_Name=Install MamoLinux 22.04 LTS
+_Name=Install MamoLinux 22.04.2 LTS
 _GenericName=Install MamoLinux
-Exec=bash -c "export BROWSER='sudo -H -u mamolinux firefox'; sudo -E calamares -D6"
+Exec="pkexec calamares -D6"
+#Exec=bash -c "export BROWSER='sudo -H -u lubuntu firefox'; sudo -E calamares -D6"
 _Comment=Calamares — System Installer
 Icon=calamares
 Terminal=false
