--- a/mamolinux/modules/packages.conf
+++ b/mamolinux/modules/packages.conf
@@ -15,3 +15,4 @@ operations:
       - language-pack-$LOCALE
       - hunspell-$LOCALE
       - libreoffice-help-$LOCALE
+      - libreoffice-l10n-$LOCALE
