--- a/mamolinux/mamolinux-calamares-advanced.desktop.in
+++ b/mamolinux/mamolinux-calamares-advanced.desktop.in
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Type=Application
 Version=1.0
-_Name=Install MamoLinux 22.04.2 LTS
-_GenericName=Install MamoLinux
-Exec=bash -c "pkexec env DISPLAY=$DISPLAY XAUTHORITY=$XAUTHORITY mamolinux-default-install"
+_Name=Install MamoLinux 22.04.2 LTS (Advanced)
+_GenericName=Install MamoLinux (Advanced)
+Exec=bash -c "pkexec env DISPLAY=$DISPLAY XAUTHORITY=$XAUTHORITY mamolinux-advanced-install"
 _Comment=Calamares — System Installer
 Icon=calamares
 Terminal=false
