--- a/mamolinux/mamolinux-calamares.desktop.in
+++ b/mamolinux/mamolinux-calamares.desktop.in
@@ -3,7 +3,7 @@ Type=Application
 Version=1.0
 _Name=Install MamoLinux 22.04.2 LTS
 _GenericName=Install MamoLinux
-Exec=bash -c "pkexec env DISPLAY=$DISPLAY XAUTHORITY=$XAUTHORITY mamolinux-default-install"
+Exec=bash -c "export BROWSER='sudo -H -u mamolinux firefox'; mamolinux-default-install"
 _Comment=Calamares — System Installer
 Icon=calamares
 Terminal=false
