Update mount, packages and after_bootloader
- mount: remove binding /run
- after_bootloader: remove .desktop files post install
- packages: remove mamolinux-live post install

--- a/mamolinux/modules/packages.conf
+++ b/mamolinux/modules/packages.conf
@@ -11,6 +11,7 @@ operations:
       - laptop-detect
       - zram-config
       - cifs-utils
+      - mamolinux-live
   - try_install:
       - language-pack-$LOCALE
       - hunspell-$LOCALE
