--- a/mamolinux/settings.conf
+++ b/mamolinux/settings.conf
@@ -2,6 +2,9 @@
 modules-search: [ local ]
 
 instances:
+- id:       default
+  module:   netinstall
+  config:   netinstall-default.conf
 - id: before_bootloader_mkdirs
   module: contextualprocess
   config: before_bootloader_mkdirs_context.conf
@@ -24,6 +27,7 @@ instances:
 sequence:
 - show:
   - welcome
+  - netinstall@default
   - locale
   - keyboard
   - partition
