Add installer shortcut to desktop
- Add desktop files to etc/skel/Desktop
- Add post installer script
- d/control: fix standard version for lintian

--- a/mamolinux/modules/mount.conf
+++ b/mamolinux/modules/mount.conf
@@ -8,6 +8,9 @@ extraMounts:
     - device: /dev
       mountPoint: /dev
       options: bind
+    - device: devpts
+      fs: devpts
+      mountPoint: /dev/pts
     - device: tmpfs
       fs: tmpfs
       mountPoint: /run
