--- a/debian/control
+++ b/debian/control
@@ -28,6 +28,7 @@ Depends: calamares (>= 3.2.14~),
          cryptsetup,
          keyutils,
          python3,
+         python3-distro,
          qml-module-qtquick-window2,
          qml-module-qtquick2,
          squashfs-tools,
