--- a/mamolinux/mamolinux-calamares.desktop.in
+++ b/mamolinux/mamolinux-calamares.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 Version=1.0
-_Name=Install MamoLinux 22.04.3 LTS
+_Name=Install MamoLinux 23.04
 _GenericName=Install MamoLinux
 Exec=bash -c "export BROWSER='sudo -H -u mamolinux firefox'; mamolinux-default-install"
 _Comment=Calamares — System Installer
