Fix root and user vars and rebase from lubuntu
- Rebase from lubuntu
- Move mount options from fstab to mount
- Replace root variable with shell expansion
  expression

--- a/common/modules/mount.conf
+++ b/common/modules/mount.conf
@@ -7,7 +7,7 @@ extraMounts:
       mountPoint: /sys
     - device: /dev
       mountPoint: /dev
-      options: bind
+      options: [ bind ]
     - device: devpts
       fs: devpts
       mountPoint: /dev/pts
@@ -16,12 +16,27 @@ extraMounts:
       mountPoint: /run
     - device: /run/udev
       mountPoint: /run/udev
-      options: bind
+      options: [ bind ]
     - device: /run/systemd/resolve
       mountPoint: /run/systemd/resolve
-      options: bind
+      options: [ bind ]
 
 extraMountsEfi:
     - device: efivarfs
       fs: efivarfs
       mountPoint: /sys/firmware/efi/efivars
+
+mountOptions:
+    - filesystem: default
+      options: [ defaults ]
+    - filesystem: btrfs
+      options: [ defaults, noatime, autodefrag ]
+      ssdOptions: [ discard, compress=lzo ]
+    - filesystem: ext4
+      ssdOptions: [ discard ]
+    - filesystem: jfs
+      ssdOptions: [ discard ]
+    - filesystem: xfs
+      ssdOptions: [ discard ]
+    - filesystem: swap
+      ssdOptions: [ discard ]
