--- a/mamolinux/modules/after_bootloader_context.conf
+++ b/mamolinux/modules/after_bootloader_context.conf
@@ -6,4 +6,4 @@
 dontChroot: false
 timeout: 120
 firmwareType:
-    "*": "-for i in `ls @@ROOT@@/home/`; do rm @@ROOT@@/home/$i/Desktop/mamolinux-calamares*.desktop || exit 0; done"
+    "*": "-rm ${ROOT}/home/${USER}/Desktop/mamolinux-calamares*.desktop"
