Rebase from lubuntu

--- a/common/modules/mount.conf
+++ b/common/modules/mount.conf
@@ -17,14 +17,13 @@ extraMounts:
     - device: /run/udev
       mountPoint: /run/udev
       options: [ bind ]
-    - device: /run/systemd/resolve
-      mountPoint: /run/systemd/resolve
-      options: [ bind ]
-
-extraMountsEfi:
     - device: efivarfs
       fs: efivarfs
       mountPoint: /sys/firmware/efi/efivars
+      efi: true
+    - device: /run/systemd/resolve
+      mountPoint: /run/systemd/resolve
+      options: [ bind ]
 
 mountOptions:
     - filesystem: default
