--- a/mamolinux/modules/after_bootloader_context.conf
+++ b/mamolinux/modules/after_bootloader_context.conf
@@ -1,9 +1,5 @@
-# Workaround from ubiquity. Ubuntu's grub will want to look in EFI/ubuntu, so
-# let's make sure it can find something there.
-# This only copies the cfg and doesn't overwrite, this is specifically so
-# this doesn't interfere with an Ubuntu installed on the system already.
 ---
 dontChroot: false
 timeout: 120
 firmwareType:
-    "*": "-rm ${ROOT}/home/${USER}/Desktop/mamolinux-calamares*.desktop"
+    "*": "-rm ${ROOT}home/${USER}/Desktop/mamolinux-calamares*.desktop"
