--- a/mamolinux/modules/automirror.conf
+++ b/mamolinux/modules/automirror.conf
@@ -2,5 +2,5 @@
 baseUrl: archive.ubuntu.com
 distribution: MamoLinux
 geoip:
-    style: "json"
-    url:   "https://ipapi.co/json"
+    style: "xml"
+    url:   "https://geoip.ubuntu.com/lookup"
