--- a/mamolinux/modules/packages.conf
+++ b/mamolinux/modules/packages.conf
@@ -14,6 +14,8 @@ operations:
       - mamolinux-live
   - try_install:
       - language-pack-$LOCALE
+      - language-pack-gnome-$LOCALE
+      - language-pack-kde-$LOCALE
       - hunspell-$LOCALE
       - libreoffice-help-$LOCALE
       - libreoffice-l10n-$LOCALE
