--- a/mamolinux/modules/partition.conf
+++ b/mamolinux/modules/partition.conf
@@ -1,10 +1,9 @@
 efiSystemPartition: "/boot/efi"
 enableLuksAutomatedPartitioning: true
 userSwapChoices:
-    - none      # Create no swap, use no swap
-    - small     # Up to 4GB
-    - suspend   # At least main memory size
-    - file      # To swap file instead of partition
+    - none
+    - file
 initialSwapChoice: file
 drawNestedPartitions: true
 defaultFileSystemType: "ext4"
+availableFileSystemTypes: ["ext4","btrfs","xfs"]
