Rebase modules and settings from lubuntu noble

--- a/mamolinux/modules/after_bootloader_context.conf
+++ b/mamolinux/modules/after_bootloader_context.conf
@@ -2,4 +2,4 @@
 dontChroot: false
 timeout: 120
 firmwareType:
-    "*": "-rm ${ROOT}home/${USER}/Desktop/mamolinux-calamares*.desktop"
+    "*": "-rm ${ROOT}/home/${USER}/Desktop/mamolinux-calamares*.desktop"
