--- a/mamolinux/modules/partition.conf
+++ b/mamolinux/modules/partition.conf
@@ -1,5 +1,6 @@
 efiSystemPartition: "/boot/efi"
 enableLuksAutomatedPartitioning: true
+luksGeneration: luks2
 userSwapChoices:
     - none
     - file
@@ -7,3 +8,14 @@ initialSwapChoice: file
 drawNestedPartitions: true
 defaultFileSystemType: "ext4"
 availableFileSystemTypes: ["ext4","btrfs","xfs"]
+partitionLayout:
+    - name: "mamolinux_boot"
+      filesystem: ext4
+      noEncrypt: true
+      onlyPresentWithEncryption: true
+      mountPoint: "/boot"
+      size: 4G
+    - name: "mamolinux_2404"
+      filesystem: unknown
+      mountPoint: "/"
+      size: 100%
