--- a/mamolinux/modules/welcome.conf
+++ b/mamolinux/modules/welcome.conf
@@ -2,7 +2,8 @@
 showSupportUrl:         true
 showKnownIssuesUrl:     true
 showReleaseNotesUrl:    true
-showDonateUrl:  https://hsbasu.github.io/mamolinux/#donations
+# WARNING: Calamares documentation indicates that showDonateUrl will be moved to branding in the future. Be prepared for things to break right here.
+showDonateUrl:  "https://hsbasu.github.io/mamolinux/#donations"
 
 requirements:
     requiredStorage:    10
@@ -19,7 +20,9 @@ requirements:
         - root
         - storage
         - ram
+
+# GeoIP is effectively disabled by setting style to "none"
 geoip:
-    style:  "xml"
+    style:  "none"
     url:    "https://geoip.ubuntu.com/lookup"
     selector: "CountryCode"
