--- a/mamolinux/settings-advanced.conf
+++ b/mamolinux/settings-advanced.conf
@@ -84,6 +84,15 @@ instances:
 - id: add386arch
   module: shellprocess
   config: shellprocess_add386arch.conf
+- id: pkgselect_action
+  module: contextualprocess
+  config: pkgselect_context.conf
+- id: pkgselect_snap_action
+  module: contextualprocess
+  config: pkgselect_snap_context.conf
+- id: oemprep
+  module: shellprocess
+  config: shellprocess_oemprep.conf
 
 sequence:
 - show:
@@ -110,6 +119,7 @@ sequence:
   - netinstall@applications
   - locale
   - keyboard
+  - pkgselect
   - partition
   - users
   - summary
@@ -138,6 +148,9 @@ sequence:
   - contextualprocess@after_bootloader
   - automirror
   - shellprocess@add386arch
+  - packages
+  - contextualprocess@pkgselect_action
+  - contextualprocess@pkgselect_snap_action
   - shellprocess@logs
   - umount
 - show:
