--- a/mamolinux/settings.conf
+++ b/mamolinux/settings.conf
@@ -23,6 +23,15 @@ instances:
 - id: add386arch
   module: shellprocess
   config: shellprocess_add386arch.conf
+- id: pkgselect_action
+  module: contextualprocess
+  config: pkgselect_context.conf
+- id: pkgselect_snap_action
+  module: contextualprocess
+  config: pkgselect_snap_context.conf
+- id: oemprep
+  module: shellprocess
+  config: shellprocess_oemprep.conf
 
 sequence:
 - show:
@@ -30,6 +39,7 @@ sequence:
   - netinstall@default
   - locale
   - keyboard
+  - pkgselect
   - partition
   - users
   - summary
@@ -58,6 +68,8 @@ sequence:
   - automirror
   - shellprocess@add386arch
   - packages
+  - contextualprocess@pkgselect_action
+  - contextualprocess@pkgselect_snap_action
   - shellprocess@logs
   - umount
 - show:
