--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,23 @@ Section: devel
 Priority: optional
 Maintainer: Himadri Sekhar Basu <hsb10@iitbbs.ac.in>
 Uploaders: Simon Quigley <tsimonq2@ubuntu.com>
-Build-Depends: debhelper-compat (= 13), intltool, qttools5-dev-tools
-Standards-Version: 4.6.0.1
+Build-Depends: calamares (>= 3.3.5),
+               cmake,
+               debhelper-compat (= 13),
+               extra-cmake-modules,
+               fakeroot,
+               golang-github-snapcore-snapd-dev (>= 2.62),
+               golang-go,
+               golang-gopkg-yaml.v2-dev,
+               intltool,
+               libkf5coreaddons-dev,
+               libqt5svg5-dev,
+               libyaml-cpp-dev,
+               qtbase5-dev,
+               qtdeclarative5-dev,
+               qttools5-dev,
+               qttools5-dev-tools
+Standards-Version: 4.6.2
 Homepage: https://github.com/mamolinux/calamares-settings-mamolinux
 Vcs-Git: https://github.com/mamolinux/calamares-settings-mamolinux.git
 Vcs-Browser: https://github.com/mamolinux/calamares-settings-mamolinux
@@ -24,15 +39,18 @@ Description: MamoLinux Calamares Settings and Branding
 
 Package: calamares-settings-ubuntu-common
 Architecture: any
-Depends: calamares (>= 3.2.14~),
+Depends: calamares (>= 3.3.5),
          cryptsetup,
+         kdialog,
          keyutils,
          python3,
          python3-distro,
          qml-module-qtquick-window2,
          qml-module-qtquick2,
          squashfs-tools,
-         ${misc:Depends}
+         sudo,
+         ${misc:Depends},
+         ${shlibs:Depends}
 Description: Common Calamares Settings
  This package contains the common Calamares settings for all flavors.
  There is also a automirror Python script to set sources based on
