--- a/mamolinux/oem/settings.conf
+++ b/mamolinux/oem/settings.conf
@@ -25,7 +25,7 @@ sequence:
 - show:
   - finished
 
-branding: lubuntu
+branding: mamolinux
 prompt-install: true
 dont-chroot: true
 oem-setup: true
