--- a/mamolinux/modules/pkgselect_context.conf
+++ b/mamolinux/modules/pkgselect_context.conf
@@ -1,17 +1,19 @@
 ---
 dontChroot: false
-timeout: 300
-"packages.minimalInstall":
+timeout: 10800
+"packages.minimalButton":
     true:
-        - "apt-get -y --purge remove snapd vlc plasma-discover transmission-qt quassel 2048-qt featherpad noblenote kcalc qps zsync partitionmanager qapt-deb-installer picom qlipper qtpass libreoffice*"
+        - "DEBIAN_FRONTEND=noninteractive apt-get -y --purge remove snapd lubuntu-snap-installation-monitor vlc plasma-discover transmission-qt quassel 2048-qt featherpad noblenote kcalc qps zsync partitionmanager qapt-deb-installer picom qlipper qtpass libreoffice*"
         - "apt-get -y autoremove"
-"packages.restrictedExtras":
+"packages.partyButton":
     true:
-        - "apt-get update"
-        - "apt-get -y install ubuntu-restricted-addons unrar"
-"packages.updateNow":
-    true: "apt-get -y full-upgrade"
-"packages.virt-manager":
-    true: "apt-get -y install virt-manager"
-"packages.thunderbird":
-    true: "apt-get -y install thunderbird"
+        - "DEBIAN_FRONTEND=noninteractive apt-get update"
+        - "DEBIAN_FRONTEND=noninteractive apt-get -y install ubuntu-restricted-addons unrar"
+"packages.updatesButton":
+    true: 
+        - "DEBIAN_FRONTEND=noninteractive apt-get update"
+        - "DEBIAN_FRONTEND=noninteractive apt-get -y -o Dpkg::Options::='--force-confnew' full-upgrade"
+"packages.virtmanagerButton":
+    true: 
+        - "DEBIAN_FRONTEND=noninteractive apt-get update"
+        - "DEBIAN_FRONTEND=noninteractive apt-get -y install virt-manager"
