--- a/mamolinux/modules/pkgselect_snap_context.conf
+++ b/mamolinux/modules/pkgselect_snap_context.conf
@@ -1,7 +1,9 @@
 ---
 dontChroot: true
-timeout: 600
-"packages.element":
-    true: "calamares_snap_install ${ROOT} element-desktop=stable"
-"packages.krita":
-    true: "calamares_snap_install ${ROOT} cups=stable kf5-5-111-qt-5-15-11-core22=stable krita=stable"
+timeout: 10800
+"packages.elementButton":
+    true: "snap-seed-glue --seed ${ROOT}/var/lib/snapd/seed element-desktop"
+"packages.kritaButton":
+    true: "snap-seed-glue --seed ${ROOT}/var/lib/snapd/seed krita"
+"packages.thunderbirdButton":
+    true: "snap-seed-glue --seed ${ROOT}/var/lib/snapd/seed thunderbird"
