Update package name and installer icon
- Rename package to calamares-settings-mamolinux
- Use new icons for desktop files

--- a/mamolinux/mamolinux-calamares-advanced.desktop.in
+++ b/mamolinux/mamolinux-calamares-advanced.desktop.in
@@ -5,7 +5,7 @@ _Name=Install MamoLinux 24.04 LTS (Advanced)
 _GenericName=Install MamoLinux (Advanced)
 Exec=bash -c "export BROWSER='sudo -H -u mamolinux firefox'; mamolinux-advanced-install"
 _Comment=Calamares — System Installer
-Icon=calamares
+Icon=mamolinux-installer
 Terminal=false
 StartupNotify=true
 Categories=Qt;System;
