--- a/mamolinux/mamolinux-calamares.desktop.in
+++ b/mamolinux/mamolinux-calamares.desktop.in
@@ -5,7 +5,7 @@ _Name=Install MamoLinux 24.04 LTS
 _GenericName=Install MamoLinux
 Exec=bash -c "export BROWSER='sudo -H -u mamolinux firefox'; mamolinux-default-install"
 _Comment=Calamares — System Installer
-Icon=calamares
+Icon=mamolinux-installer
 Terminal=false
 StartupNotify=true
 Categories=Qt;System;
