Update snaps to be installed and fix oem
- Remove krita
- Add skype and telegram
- Update pkgselect module for full and
  normal installation
- Fix icon in oem desktop files
- Fix lintian

--- a/mamolinux/modules/pkgselect_context.conf
+++ b/mamolinux/modules/pkgselect_context.conf
@@ -3,8 +3,15 @@ dontChroot: false
 timeout: 10800
 "packages.minimalButton":
     true:
-        - "DEBIAN_FRONTEND=noninteractive apt-get -y --purge remove snapd lubuntu-snap-installation-monitor vlc plasma-discover transmission-qt quassel 2048-qt featherpad noblenote kcalc qps zsync partitionmanager qapt-deb-installer picom qlipper qtpass libreoffice*"
-        - "apt-get -y autoremove"
+        - "DEBIAN_FRONTEND=noninteractive apt-get -y --purge remove mamolinux-desktop"
+        - "apt-get -y autoremove --purge"
+        - "apt-get -y install mamolinux-desktop-minimal --no-install-recommends"
+"packages.normalButton":
+    true:
+        - "apt-get -y install mamolinux-desktop --no-install-recommends"
+"packages.fullButton":
+    true:
+        - "apt-get -y install mamolinux-desktop-full --no-install-recommends"
 "packages.partyButton":
     true:
         - "DEBIAN_FRONTEND=noninteractive apt-get update"
