--- a/mamolinux/oem/calamares-launch-oem.desktop
+++ b/mamolinux/oem/calamares-launch-oem.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Type=Application
 Version=1.0
-Name=Install Lubuntu 24.04 LTS (OEM mode)
+Name=Install MamoLinux 24.04 LTS (OEM mode)
 Exec=sudo -E /usr/bin/calamares-launch-oem
-Icon=system-software-install
+Icon=mamolinux-installer
 Terminal=false
 StartupNotify=true
 Categories=Qt;System;
