--- a/mamolinux/settings-advanced.conf
+++ b/mamolinux/settings-advanced.conf
@@ -62,19 +62,16 @@ instances:
 - id:       utilities
   module:   netinstall
   config:   netinstall-utilities.conf
-- id: before_bootloader_mkdirs
-  module: contextualprocess
-  config: before_bootloader_mkdirs_context.conf
-- id: before_bootloader
-  module: contextualprocess
-  config: before_bootloader_context.conf
-- id: after_bootloader
-  module: contextualprocess
-  config: after_bootloader_context.conf
 - id: choice
   module:   packages
   config:   packages.conf
   weight:   30
+- id: before_bootloader
+  module: contextualprocess
+  config: before_bootloader_context.conf
+- id: copy_vmlinuz_shellprocess
+  module: shellprocess
+  config: copy_vmlinuz_shellprocess.conf
 - id: logs
   module: shellprocess
   config: shellprocess_logs.conf
@@ -84,15 +81,18 @@ instances:
 - id: add386arch
   module: shellprocess
   config: shellprocess_add386arch.conf
-- id: pkgselect_action
-  module: contextualprocess
-  config: pkgselect_context.conf
-- id: pkgselect_snap_action
-  module: contextualprocess
-  config: pkgselect_snap_context.conf
 - id: oemprep
   module: shellprocess
   config: shellprocess_oemprep.conf
+- id: fixconkeys_part1
+  module: shellprocess
+  config: shellprocess_fixconkeys_part1.conf
+- id: fixconkeys_part2
+  module: shellprocess
+  config: shellprocess_fixconkeys_part2.conf
+- id: fix-oem-uid
+  module: shellprocess
+  config: shellprocess_fix_oem_uid.conf
 
 sequence:
 - show:
@@ -106,7 +106,7 @@ sequence:
   - netinstall@communication
   - netinstall@development
   - netinstall@office
-  - netinstall@fonts  
+  - netinstall@fonts
   - netinstall@multimedia
   - netinstall@internet
   - netinstall@theming
@@ -134,23 +134,22 @@ sequence:
   - localecfg
   - luksbootkeyfile
   - users
-  - packages@choice
   - displaymanager
   - networkcfg
   - hwclock
-  - contextualprocess@before_bootloader_mkdirs
+  - shellprocess@copy_vmlinuz_shellprocess
   - shellprocess@bug-LP#1829805
+  - shellprocess@fixconkeys_part1
+  - shellprocess@fixconkeys_part2
   - initramfscfg
   - initramfs
   - grubcfg
   - contextualprocess@before_bootloader
   - bootloader
-  - contextualprocess@after_bootloader
-  - automirror
   - shellprocess@add386arch
+  - automirror
+  - pkgselectprocess
   - packages
-  - contextualprocess@pkgselect_action
-  - contextualprocess@pkgselect_snap_action
   - shellprocess@logs
   - umount
 - show:
