--- a/common/modules/mount.conf
+++ b/common/modules/mount.conf
@@ -21,6 +21,9 @@ extraMounts:
     - device: /run/systemd/resolve
       mountPoint: /run/systemd/resolve
       options: [ bind ]
+    - device: /cdrom
+      mountPoint: /media/cdrom
+      options: [ bind ]
 
 mountOptions:
     - filesystem: default
