--- a/debian/control
+++ b/debian/control
@@ -3,23 +3,24 @@ Section: devel
 Priority: optional
 Maintainer: Himadri Sekhar Basu <hsb10@iitbbs.ac.in>
 Uploaders: Simon Quigley <tsimonq2@ubuntu.com>
-Build-Depends: calamares (>= 3.3.5),
+Build-Depends: debhelper-compat (= 13),
+               dh-sequence-qmldeps,
                cmake,
-               debhelper-compat (= 13),
                extra-cmake-modules,
                fakeroot,
-               golang-github-snapcore-snapd-dev (>= 2.62),
-               golang-go,
-               golang-gopkg-yaml.v2-dev,
                intltool,
-               libkf5coreaddons-dev,
-               libqt5svg5-dev,
+               libapt-pkg-dev,
+               libcalamares-dev (>= 3.3.13-0ubuntu4),
+               libkf6coreaddons-dev,
+               libqt6svg6-dev,
                libyaml-cpp-dev,
-               qtbase5-dev,
-               qtdeclarative5-dev,
-               qttools5-dev,
-               qttools5-dev-tools
-Standards-Version: 4.6.2
+               python3,
+               qt6-base-dev,
+               qt6-declarative-dev,
+               qt6-l10n-tools,
+               qt6-tools-dev,
+               qt6-tools-dev-tools
+Standards-Version: 4.7.2
 Homepage: https://github.com/mamolinux/calamares-settings-mamolinux
 Vcs-Git: https://github.com/mamolinux/calamares-settings-mamolinux.git
 Vcs-Browser: https://github.com/mamolinux/calamares-settings-mamolinux
@@ -28,25 +29,26 @@ Rules-Requires-Root: no
 Package: calamares-settings-mamolinux
 Architecture: all
 Depends: calamares-settings-ubuntu-common (>= ${binary:Version}),
-         ${misc:Depends}
-Breaks: calamares-settings-lubuntu, calamares-settings-ubuntustudio
-Conflicts: calamares-settings-lubuntu, calamares-settings-ubuntustudio
+         ${misc:Depends},
+         ${qml6:Depends}
+Conflicts: calamares-settings-ubuntu-flavor
+Provides: calamares-settings-ubuntu-flavor
 Description: MamoLinux Calamares Settings and Branding
  This package contains the Calamares settings and branding for MamoLinux.
  As part of the branding the installer slideshow is contained within.
- The settings ensure a proper MamoLinux is installed with the
+ The settings ensure a proper MamoLinux desktop is installed with
  a desktop environment of user's choice.
 
 Package: calamares-settings-ubuntu-common
 Architecture: any
-Depends: calamares (>= 3.2.14~),
+Depends: calamares (>= 3.3.13-0ubuntu4),
+         calamares-settings-ubuntu-common-data (= ${binary:Version}),
          cryptsetup,
+         dracut-core,
          kdialog,
          keyutils,
-         python3,
-         python3-distro,
-         qml-module-qtquick-window2,
-         qml-module-qtquick2,
+         libglib2.0-bin,
+         snapd-seed-glue,
          squashfs-tools,
          sudo,
          ${misc:Depends},
@@ -55,3 +57,19 @@ Description: Common Calamares Settings
  This package contains the common Calamares settings for all flavors.
  There is also a automirror Python script to set sources based on
  geolocation.
+ .
+ Common settings for all Ubuntu flavors.
+
+Package: calamares-settings-ubuntu-common-data
+Architecture: all
+Depends: ${misc:Depends},
+         python3,
+         python3-distro,
+Conflicts: calamares-settings-ubuntu-common (<< 1:25.04.16)
+Replaces: calamares-settings-ubuntu-common (<< 1:25.04.16)
+Description: Data for Common Calamares Settings
+ This package contains the common Calamares settings for all flavors.
+ There is also a automirror Python script to set sources based on
+ geolocation.
+ .
+ Architecture-independent data for the common Calamares settings.
