--- a/mamolinux/oem/calamares-launch-oem.desktop
+++ b/mamolinux/oem/calamares-launch-oem.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 Version=1.0
-Name=Install MamoLinux 24.04 LTS (OEM mode)
+Name=Install MamoLinux 25.04 (OEM mode)
 Exec=sudo -E /usr/bin/calamares-launch-oem
 Icon=mamolinux-installer
 Terminal=false
