--- a/mamolinux/oem/modules/displaymanager.conf
+++ b/mamolinux/oem/modules/displaymanager.conf
@@ -1,9 +1,5 @@
 displaymanagers:
-  - sddm
-
-defaultDesktopEnvironment:
-    executable: "lxqt"
-    desktopFile: "Lubuntu"
+  - lightdm
 
 basicSetup: false
 sysconfigSetup: false
