--- a/mamolinux/oem/settings.conf
+++ b/mamolinux/oem/settings.conf
@@ -2,6 +2,9 @@
 modules-search: [ local ]
 
 instances:
+- id: oemalpurge
+  module: shellprocess
+  config: shellprocess_oemalpurge.conf
 - id: oemfinish
   module: shellprocess
   config: shellprocess_oemfinish.conf
@@ -17,6 +20,7 @@ sequence:
   - locale
   - keyboard
   - localecfg
+  - shellprocess@oemalpurge
   - users
   - displaymanager
   - packages
