--- a/mamolinux/settings.conf
+++ b/mamolinux/settings.conf
@@ -5,15 +5,12 @@ instances:
 - id:       default
   module:   netinstall
   config:   netinstall-default.conf
-- id: before_bootloader_mkdirs
-  module: contextualprocess
-  config: before_bootloader_mkdirs_context.conf
 - id: before_bootloader
   module: contextualprocess
   config: before_bootloader_context.conf
-- id: after_bootloader
-  module: contextualprocess
-  config: after_bootloader_context.conf
+- id: copy_vmlinuz_shellprocess
+  module: shellprocess
+  config: copy_vmlinuz_shellprocess.conf
 - id: logs
   module: shellprocess
   config: shellprocess_logs.conf
@@ -23,15 +20,18 @@ instances:
 - id: add386arch
   module: shellprocess
   config: shellprocess_add386arch.conf
-- id: pkgselect_action
-  module: contextualprocess
-  config: pkgselect_context.conf
-- id: pkgselect_snap_action
-  module: contextualprocess
-  config: pkgselect_snap_context.conf
 - id: oemprep
   module: shellprocess
   config: shellprocess_oemprep.conf
+- id: fixconkeys_part1
+  module: shellprocess
+  config: shellprocess_fixconkeys_part1.conf
+- id: fixconkeys_part2
+  module: shellprocess
+  config: shellprocess_fixconkeys_part2.conf
+- id: fix-oem-uid
+  module: shellprocess
+  config: shellprocess_fix_oem_uid.conf
 
 sequence:
 - show:
@@ -57,19 +57,19 @@ sequence:
   - displaymanager
   - networkcfg
   - hwclock
-  - contextualprocess@before_bootloader_mkdirs
+  - shellprocess@copy_vmlinuz_shellprocess
   - shellprocess@bug-LP#1829805
+  - shellprocess@fixconkeys_part1
+  - shellprocess@fixconkeys_part2
   - initramfscfg
   - initramfs
   - grubcfg
   - contextualprocess@before_bootloader
   - bootloader
-  - contextualprocess@after_bootloader
-  - automirror
   - shellprocess@add386arch
+  - automirror
+  - pkgselectprocess
   - packages
-  - contextualprocess@pkgselect_action
-  - contextualprocess@pkgselect_snap_action
   - shellprocess@logs
   - umount
 - show:
