--- a/mamolinux/mamolinux-calamares.desktop.in
+++ b/mamolinux/mamolinux-calamares.desktop.in
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Type=Application
 Version=1.0
-_Name=Install MamoLinux 24.04 LTS
+_Name=Install MamoLinux 25.04
 _GenericName=Install MamoLinux
-Exec=bash -c "export BROWSER='sudo -H -u mamolinux firefox'; mamolinux-default-install"
+Exec=mamolinux-install --default
 _Comment=Calamares — System Installer
 Icon=mamolinux-installer
 Terminal=false
